src/test/deca/context/valid/improvided/assign_int_float.deca
// Description :
//	Conversion implicite d'un int --> float (ConvFloat)
// Resultats :
// 	ok

{
	float x = 3;
	
}
